--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   }
 
   .swiper {
-      margin-top: 50px;
+      margin-top: 240px;
     width:100%;
     padding-top: 50px;
     padding-bottom: 300px;
@@ -68,6 +68,26 @@ body {
     justify-content: center;
 
     background: white;
+}
+
+.text1
+{
+    position: absolute;
+    left: 50px;
+    top: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
+    color: aliceblue;
+}
+
+.text2
+{
+    position: absolute;
+    left: 50px;
+    top: 130px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    color: white
 }
 
 .header img{ width: 60px; cursor: pointer;}
